<resources>
    <string name="app_name">WEATHER</string>
    <string name="login_username">User name</string>
    <string name="login_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your user name</string>


    <!--    Errors    -->
    <string name="login_error">Login error, check user name or password</string>
    <string name="empty_field_error">Input fields can\'t be empty</string>
    <string name="registration_user_name_error">Please use A–Z,a–z, characters 3–20</string>
    <string name="registration_password_error">Password must contain A–Z,a–z, characters 5–20</string>
    <string name="registration_password_repeat_error">Password doesn\'t match</string>
    <string name="registration_email_error">Email address not valid</string>


    <string name="success_registration">Registration complete, please login</string>

    <string name="registration_form">Register new user</string>

    <string name="user_name_hint">Enter your user name</string>
    <string name="user_password_hint">Enter your password</string>
    <string name="user_password_repeat_hint">Repeat your password</string>

    <string name="user_email_hint">Enter email address</string>
    <string name="register_submit">Submit</string>
    <string name="title_activity_settings">SettingsActivity</string>
<string name="add_weather_btn">Add weather</string>



    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>