<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:padding="20dp"
    android:orientation="vertical"
    app:passwordToggleEnabled="true"

    tools:context=".RegisterActivity">



    <TextView
        android:id="@+id/register_form_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/registration_form" />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_form_user_name"
        android:hint="@string/user_name_hint"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_form_user_email"
        android:inputType="textEmailAddress"
        android:hint="@string/user_email_hint"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/sun"
        android:inputType="textPassword"
        android:id="@+id/register_form_password"
        android:hint="@string/user_password_hint"
       />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/sun"
        android:inputType="textPassword"
        android:id="@+id/register_form_repeat_password"
        android:hint="@string/user_password_repeat_hint"
       />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/sun"
        android:id="@+id/register_form_btn"
        android:text="@string/register_submit"
      />




</LinearLayout>